--- a/map.html
+++ b/map.html
@@ -51,19 +51,19 @@
 
 
 <a href="javascript:void(0)" id="pintuUtama">
-<path id="1" class="st0" d="M400.4,260.4H230.5v280.3h-59V204h0.4h58.6h169.9V260.4z"/> </a>
-<path id="2" class="st1" d="M533.1,643.5H230.5V260.4h302.6V643.5z"/>
-<path id="3" class="st1" d="M533.1,957.3H230.5V643.5h302.6V957.3z"/>
-<path id="4" class="st1" d="M533.1,857.5H724v99.8H533.1V857.5z"/>
-<path id="5" class="st0" d="M533.1,776H724v81.5H533.1V776z"/>
-<path id="6" class="st0" d="M533.1,619.1H724V776H533.1V619.1z"/>
-<path id="7" class="st0" d="M533.1,470.3H724v148.8H533.1V470.3z"/>
-<path id="8" class="st0" d="M724,524.3h186.4V776H724V524.3z"/>
-<path id="9" class="st0" d="M724,276.6h186.4v247.7H724V276.6z"/>
-<path id="10" class="st0" d="M665.5,276.6H724v193.7h-58.5V276.6z"/>
-<path id="11" class="st0" d="M533.1,276.6h132.4v193.7H533.1V276.6z"/>
-<path id="12" class="st0" d="M665.5,187.3h244.9v89.3H665.5V187.3z"/>
-<path id="13" class="st1" d="M910.4,276.6h89.6V776h-89.6V276.6z"/>
+<path id="13-ll2" class="st0" d="M400.4,260.4H230.5v280.3h-59V204h0.4h58.6h169.9V260.4z"/> </a>
+<path id="2-h2" class="st1" d="M533.1,643.5H230.5V260.4h302.6V643.5z"/>
+<path id="0-gerbang" class="st1" d="M533.1,957.3H230.5V643.5h302.6V957.3z"/>
+<path id="4-h4" class="st1" d="M533.1,857.5H724v99.8H533.1V857.5z"/>
+<path id="15-t1" class="st0" d="M533.1,776H724v81.5H533.1V776z"/>
+<path id="18-rt1" class="st0" d="M533.1,619.1H724V776H533.1V619.1z"/>
+<path id="19-rt2" class="st0" d="M533.1,470.3H724v148.8H533.1V470.3z"/>
+<path id="23-r1" class="st0" d="M724,524.3h186.4V776H724V524.3z"/>
+<path id="24-r3" class="st0" d="M724,276.6h186.4v247.7H724V276.6z"/>
+<path id="17-l1" class="st0" d="M665.5,276.6H724v193.7h-58.5V276.6z"/>
+<path id="25-r4" class="st0" d="M533.1,276.6h132.4v193.7H533.1V276.6z"/>
+<path id="26-tb1" class="st0" d="M665.5,187.3h244.9v89.3H665.5V187.3z"/>
+<path id="9-h9" class="st1" d="M910.4,276.6h89.6V776h-89.6V276.6z"/>
 
 <text transform="matrix(1 0 0 1 591.7749 827.8823)" class="st3 st4">TERAS</text>
 <text transform="matrix(1 0 0 1 584.304 711.1729)" class="st3 st4">R. TAMU</text>
