--- a/index.html
+++ b/index.html
@@ -174,7 +174,12 @@
 </div>
 
 
-
+<script>
+  function play(){
+    var audio = new Audio('intro-2.wav');
+    audio.play();
+  }
+</script>
 
 <script src="vendor/screenfull.min.js" ></script>
 <script src="vendor/bowser.min.js" ></script>
