--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
   <img class="icon" src="img/information.png">
 </a>
 
-<audio id="audio" src="intro-final.wav"></audio>
+<audio id="audio" src="intro-1.mp3"></audio>
 
 <script src="vendor/screenfull.min.js" ></script>
 <script src="vendor/bowser.min.js" ></script>
