adding how to use button

--- a/index.html
+++ b/index.html
@@ -150,7 +150,6 @@
 </a>
 
 
-
 <a href="javascript:void(0)" id="viewUp" class="viewControlButton viewControlButton-1">
   <img class="icon" src="img/up.png">
 </a>
@@ -169,12 +168,27 @@
 <a href="javascript:void(0)" id="viewOut" class="viewControlButton viewControlButton-6">
   <img class="icon" src="img/minus.png">
 </a>
-<a href="javascript:void(0)" id="audioControl" class="viewControlButton viewControlButton-7" style="margin-left: 145px;">
+<a href="javascript:void(0)" id="audioControl" class="viewControlButton viewControlButton-7">
   <img class="icon" src="img/audio.png">
 </a>
-<a href="landing-page.html" id="informationButton" class="viewControlButton viewControlButton-8" style="margin-left: -205px;">
-  <img class="icon" src="img/information.png">
+<a href="landing-page.html" id="homeButton" class="viewControlButton viewControlButton-8">
+  <img class="icon" src="img/home.png">
 </a>
+
+<a href="javascript:void(0)" id="helpButton" class="viewControlButton viewControlButton-9">
+  <img class="icon" src="img/help.png">
+</a>
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- The Close Button -->
+  <span class="close">&times;</span>
+
+  <!-- Modal Content (The Image) -->
+  <img class="modal-content" id="img01" src="img/help-img.jpg">
+
+</div>
 
 <audio id="audio" src="intro-1.mp3"></audio>
 
