--- a/landing-page.html
+++ b/landing-page.html
@@ -89,7 +89,7 @@
       <!-- Slide 1 -->
       <div class="carousel-item active">
         <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Selamat Datang di <span>Rumah Dahor Balikpapan</span></h2>
+          <h2 class="animate__animated animate__fadeInDown">Selamat Datang di <span>Dahor Heritage Balikpapan</span></h2>
           <p class="animate__animated fanimate__adeInUp">Mari jelajahi dan belajar tentang Rumah Dahor Balikpapan secara virtual</p>
           <a href="/dahor/index.html" class="btn-get-started animate__animated animate__fadeInUp scrollto">Jelajahi Sekarang</a>
         </div>
@@ -855,7 +855,7 @@
     </section> <!-- End Team Section -->
 
     <!-- ======= Contact Section ======= -->
-    <!-- <section id="contact" class="contact">
+    <section id="contact" class="contact">
       <div class="container">
 
         <div class="section-title" data-aos="zoom-out">
@@ -869,20 +869,20 @@
             <div class="info">
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
-                <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <h4>Lokasi</h4>
+                <p>Jl Dahor No 1, Baru Ilir, Balikpapan Barat, Balikpapan</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
-                <h4>Email:</h4>
-                <p>info@example.com</p>
+                <h4>Waktu Operasi</h4>
+                <p>Hari Senin - Jumat\n Jam 09.00-16.00 WITA</p>
               </div>
 
               <div class="phone">
-                <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <i class="bi bi-ticket-perforated-fill"></i>
+                <h4>HTM</h4>
+                <p>Gratis</p>
               </div>
 
             </div>
@@ -891,35 +891,14 @@
 
           <div class="col-lg-8 mt-5 mt-lg-0" data-aos="fade-left">
 
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-              <div class="row">
-                <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
-                </div>
-                <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-                </div>
-              </div>
-              <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-              </div>
-              <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-              </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15955.563443011302!2d116.8255360650357!3d-1.235426695779628!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2df147c0b5b4f22f%3A0xb0ca2e33f4f622ea!2sDAHOR%20Heritage%20Balikpapan!5e0!3m2!1sid!2sid!4v1695929054575!5m2!1sid!2sid" width="500" height="350" style="border:0;" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
           </div>
 
         </div>
 
       </div>
-    </section>End Contact Section -->
+    </section>  <!-- End Contact Section -->
 
   </main><!-- End #main -->
 
