adding changes to voice over feature

--- a/index.html
+++ b/index.html
@@ -169,7 +169,9 @@
   <img class="icon" src="img/minus.png">
 </a>
 <a href="javascript:void(0)" id="audioControl" class="viewControlButton viewControlButton-7">
-  <img class="icon" src="img/audio.png">
+  <img class="icon off" src="img/audio.png">
+  <img class="icon on" src="img/audio-pause.png">
+
 </a>
 <a href="landing-page.html" id="homeButton" class="viewControlButton viewControlButton-8">
   <img class="icon" src="img/home.png">
